--- a/faconstor/templates/base1.html
+++ b/faconstor/templates/base1.html
@@ -658,8 +658,8 @@
     /*
     避免页面跳转时定时器的叠加
      */
-    clearTimeout(my_t);
-    var my_t = window.setInterval(getTaskInfo, 6000);
+    //clearTimeout(my_t);
+    //var my_t = window.setInterval(getTaskInfo, 6000);
     //}
     //else {
     //    window.clearInterval(my_t)
