--- a/faconstor/templates/base1.html
+++ b/faconstor/templates/base1.html
@@ -482,7 +482,10 @@
 {% block script %}
 
 {% endblock %}
-<script src="/static/myjs{{ pagefuns.curfun.jsurl }}.js" type="text/javascript"></script>
+
+{% if pagefuns.curfun.jsurl != '/manualrecovery' %}
+    <script src="/static/myjs{{ pagefuns.curfun.jsurl }}.js" type="text/javascript"></script>
+{% endif %}
 <script>
     // 构造前缀
     var href = window.location.href;
